--- a/SuperGameEngine/EngineEntry/EngineEntry.vcxproj
+++ b/SuperGameEngine/EngineEntry/EngineEntry.vcxproj
@@ -149,6 +149,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\FatedQuest.Libraries\BinaryOperations\BinaryOperations.vcxproj">
+      <Project>{1bc135f0-12f0-4dfd-90a4-8dd09af88b7c}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\FatedQuest.Libraries\Logging\Logging.vcxproj">
       <Project>{fbd9a5d9-bb38-479b-8dd7-1ebd2382a035}</Project>
     </ProjectReference>
