[#75] You can now load textures and assets from Zip files.
- To Test rename Product folder, then zip Engine, copy zip to where products was and then rename zip to products so that Products.zip contains Engine folder. This because paths are relative to Products folder - therefore the zip is relative to the Products content.

--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -263,6 +263,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\FatedQuest.Libraries\BinaryOperations\BinaryOperations.vcxproj">
+      <Project>{1bc135f0-12f0-4dfd-90a4-8dd09af88b7c}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\FatedQuest.Libraries\StandardCLibrary\StandardCLibrary.vcxproj">
       <Project>{3964752b-73c2-4c0e-8bfe-3c42dbef2e03}</Project>
     </ProjectReference>
