[#80] Moved the Libraries when creating a package into their own folder.

--- a/SuperGameEngine/FatedQuest.Libraries/BinaryOperationsTests/BinaryOperationsTests.vcxproj
+++ b/SuperGameEngine/FatedQuest.Libraries/BinaryOperationsTests/BinaryOperationsTests.vcxproj
@@ -32,6 +32,12 @@
   <ImportGroup Label="Shared" />
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\Libraries\SuperGameEngine\FatedQuest.Libraries\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\Libraries\SuperGameEngine\FatedQuest.Libraries\</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
