--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj.filters
@@ -316,6 +316,15 @@
     <ClCompile Include="Engine\AuthoredLoader\XMLPrimitiveDataLoader.cpp">
       <Filter>Project Files\Engine\AuthoredLoader</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\AuthoredLoader\ParsedData.cpp">
+      <Filter>Project Files\Engine\AuthoredLoader</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\AuthoredLoader\PrimitiveDataParser.cpp">
+      <Filter>Project Files\Engine\AuthoredLoader</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\AuthoredLoader\SceneDataParser.cpp">
+      <Filter>Project Files\Engine\AuthoredLoader</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Structural\Scene\GrandScene.h">
@@ -550,6 +559,15 @@
       <Filter>Project Files\Engine\AuthoredLoader\API</Filter>
     </ClInclude>
     <ClInclude Include="Engine\AuthoredLoader\XMLPrimitiveDataLoader.h">
+      <Filter>Project Files\Engine\AuthoredLoader\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\AuthoredLoader\ParsedData.h">
+      <Filter>Project Files\Engine\AuthoredLoader\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\AuthoredLoader\PrimitiveDataParser.h">
+      <Filter>Project Files\Engine\AuthoredLoader\API</Filter>
+    </ClInclude>
+    <ClInclude Include="Engine\AuthoredLoader\SceneDataParser.h">
       <Filter>Project Files\Engine\AuthoredLoader\API</Filter>
     </ClInclude>
   </ItemGroup>
