--- a/SuperGameEngine/SuperGameEngineTests/SuperGameEngineTests.vcxproj.filters
+++ b/SuperGameEngine/SuperGameEngineTests/SuperGameEngineTests.vcxproj.filters
@@ -32,6 +32,12 @@
     <ClCompile Include="Engine\AuthoredLoader\PrimitiveDataTests.cpp">
       <Filter>Project Files\Engine\AuthoredLoader</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\AuthoredLoader\ParsedDataTests.cpp">
+      <Filter>Project Files\Engine\AuthoredLoader</Filter>
+    </ClCompile>
+    <ClCompile Include="Engine\AuthoredLoader\SceneDataParserTests.cpp">
+      <Filter>Project Files\Engine\AuthoredLoader</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Project Files">
