[Internal][#54] Started to create package provider for complete file reading from package.
Committing early so that I can iterate over a proper project solution as this appears to be a bigger piece of code than anticipated.

--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -143,6 +143,8 @@
     <ClInclude Include="Engine\AuthoredLoader\XMLPrimitiveDataLoader.h" />
     <ClInclude Include="Engine\Basic\FilesAndFolders.h" />
     <ClInclude Include="Engine\Content\ContentManager.h" />
+    <ClInclude Include="Engine\Content\PackageContents.h" />
+    <ClInclude Include="Engine\Content\ProductsPackage.h" />
     <ClInclude Include="Engine\Graphics\CacheableRender.h" />
     <ClInclude Include="Engine\Graphics\EmptyTexture.hpp" />
     <ClInclude Include="Engine\Graphics\RenderPacket.h" />
@@ -226,6 +228,8 @@
     <ClCompile Include="Engine\AuthoredLoader\XMLPrimitiveDataLoader.cpp" />
     <ClCompile Include="Engine\Basic\FilesAndFolders.cpp" />
     <ClCompile Include="Engine\Content\ContentManager.cpp" />
+    <ClCompile Include="Engine\Content\PackageContents.cpp" />
+    <ClCompile Include="Engine\Content\ProductsPackage.cpp" />
     <ClCompile Include="Engine\Graphics\CacheableRender.cpp" />
     <ClCompile Include="Engine\Graphics\RenderPacket.cpp" />
     <ClCompile Include="Engine\Graphics\SimpleRenderPacket.cpp" />
